2010-07-12  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Reinstate support for MT family IDs.

	* tools/lib/t-spr/slimpl.m4 (sl_create),
	* tools/lib/slc/ast.py (Create.__init__),
	* tools/lib/slc/input/parse.py (parse_create): Propagate the FID lvalue.

	* tools/lib/slc/lower/lowercreate.py
	(Create_2_LowCreate.visit_create): Define the FID temporary here
	and assign the FID lvalue in the body always.

	* tools/lib/slc/mtalpha/visitors.py
	(Create_2_MTACreate.visit_lowcreate): Use it.

2010-07-11  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	More resource deadlock prevention.

	* tools/include/svp/delegate.h: Make the default place identifier
	`soft' to prevent resource deadlocks.
	* tools/lib/slc/mtalpha/visitors.py
	(Create_2_MTACreate.visit_lowcreate): Force suspend bit when
	creating with no `seq' alternative.

2010-07-11  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Add support for new performance counters.

	* lib/include/svp/perf.h: New counters for TT and FT occupancy.
	* lib/src/perf.h: Name the new counters. Also support computer
	columns.

2010-07-11  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix bug in `spr'.

	* tools/lib/slc/lower/seq.py (TFun_2_CFun): Fix support for thread
	function pointer declarations.

2010-07-06  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Enhance support for `_mutable' global thread parameters.

	* tools/lib/slc/lower/seq.py (TFun_2_CFun.visit_funparm): Do not
	declare `_mutable' parameters with the `register' qualifier, since
	they should have an address.

2010-07-05  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix bug in `spr'.

	A large inefficiency would cause exponential space complexity
	during transformation in the depth of C scope nesting. This would
	cause exceedingly large compilation times and/or stack blowouts
	for large programs.

	* tools/lib/slc/visitors.py (ScopedVisitor): Remember the current
	stack of C scopes.

	* tools/lib/slc/lower/split.py (SplitCreates.visit_lowcreate):